update: excel format

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -26,6 +26,7 @@
             
             <option value="csv">CSV</option>
             <option value="txt">TXT</option>
+            <option value="xlsx">XLSX</option>
         </select>
         <button type="submit" onclick="startscraping()">Scrap</button>
     </form>
